Change some mistakes in method

--- a/proposal/Proposal.ipynb
+++ b/proposal/Proposal.ipynb
@@ -1036,7 +1036,7 @@
    "metadata": {},
    "source": [
     "Since the UNS is a category variable, we know this is a classification problem. So, we will use a K-NN model with cross-validation for our predictions.\n",
-    "As above we get that LPR and PEG are enough to be used as predictors, and the graph shows that when k = 7, the accuracy estimate is the biggest. Therefore, in the next step, we will train the training data and use k = 6 to predict testing data. We will use incorrect result and correct result to form a bar plot to visualize the correctness of the prediction."
+    "As above we get that LPR and PEG are enough to be used as predictors, and the graph shows that when k = 7, the accuracy estimate is the biggest. Therefore, in the next step, we will train the training data and use k = 7 to predict testing data. We will use incorrect results and correct results to form a bar plot to visualize the correctness of the prediction."
    ]
   },
   {
