Added introduction and references

--- a/Project Report/Report.ipynb
+++ b/Project Report/Report.ipynb
@@ -19,7 +19,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Methods and Results"
+    "# Predicting the Student Knowledge Levels for Electrical DC Machines "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Introduction\n",
+    "\n",
+    "### Background\n",
+    "\n",
+    "A user knowledge model is a representation of the conceptual understanding of a user. It is used around the world, and the main goal is to customize systems to adapt the needs of the user. In the past, computers have provided specific information to humans, but nowadays, they are more expected to understand the habits of users and be able to present them with information that is useful to them. Some examples of usages include intelligent tutoring systems, which help students in a specific field of study, and recommender systems, which are used to present products to users that fit their needs.\n",
+    "\n",
+    "### Our Question\n",
+    "\n",
+    "**Can we predict a user’s level of knowledge solely based on exam scores?**\n",
+    "\n",
+    "### Our Dataset\n",
+    "\n",
+    "We are using the User Knowledge dataset, where students are tested about the subject of Electrical DC Machines. In this dataset, we are provided with various statistics. Each row in the dataset represents a user, and each column represents various statistics on the user. The 6th column is the knowledge level of the user, which is what we are trying to predict. Columns 1-5 are possible predictors for the user knowledge level. \n",
+    "\n",
+    "These possible predictors are: the degree of study time for goal object materials (STG), the degree of repetition number of the user for goal object materials (SCG), the degree of study time for related objects with goal object (STR), the exam performance of the user for related objects with goal object (LPR), and the exam performance of the user for goal object materials (PEG). Essentially, the possible predictors are either how much an individual has studied, repeated, or how well they did on the exam. We will further explore these possible predictors to figure out which ones to use to predict the user knowledge level.\n",
+    "\n",
+    "We do not need to process this dataset, because it is already tidy. Variables are in columns, observations are in rows, and each value has its own cell. The data is also already split into training and testing data for us, and has been scaled as well. \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Methods and Results"
    ]
   },
   {
@@ -1021,10 +1052,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## References\n",
+    "\n",
+    "Makhfi, P. (n.d.). Introduction to Knowledge Modeling. Introduction to knowledge modeling. Retrieved December 4, 2021, from http://www.makhfi.com/KCM_intro.htm.\n",
+    "\n",
+    "Kahraman, H. T., Sagiroglu, S., & Colak, I. (2012, August 21). The development of intuitive knowledge classifier and the modeling of Domain Dependent Data. Knowledge-Based Systems. Retrieved December 4, 2021, from \n",
+    "https://www.sciencedirect.com/science/article/abs/pii/S0950705112002225.\n",
+    "\n",
+    "### Dataset:\n",
+    "UCI Machine Learning Repository: User knowledge modeling data set. (n.d.). Retrieved December 4, 2021, from https://archive.ics.uci.edu/ml/datasets/User+Knowledge+Modeling#.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
