--- a/Project Report/Report.ipynb
+++ b/Project Report/Report.ipynb
@@ -2,9 +2,93 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────── tidyverse 1.3.0 ──\n",
+      "\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.2     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.0.3     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.2\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 1.3.1     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.0\n",
+      "\n",
+      "Warning message:\n",
+      "“package ‘ggplot2’ was built under R version 4.0.1”\n",
+      "Warning message:\n",
+      "“package ‘tibble’ was built under R version 4.0.2”\n",
+      "Warning message:\n",
+      "“package ‘tidyr’ was built under R version 4.0.2”\n",
+      "Warning message:\n",
+      "“package ‘dplyr’ was built under R version 4.0.2”\n",
+      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\n",
+      "Warning message:\n",
+      "“package ‘tidymodels’ was built under R version 4.0.2”\n",
+      "── \u001b[1mAttaching packages\u001b[22m ────────────────────────────────────── tidymodels 0.1.1 ──\n",
+      "\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mbroom    \u001b[39m 0.7.0      \u001b[32m✔\u001b[39m \u001b[34mrecipes  \u001b[39m 0.1.13\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mdials    \u001b[39m 0.0.9      \u001b[32m✔\u001b[39m \u001b[34mrsample  \u001b[39m 0.0.7 \n",
+      "\u001b[32m✔\u001b[39m \u001b[34minfer    \u001b[39m 0.5.4      \u001b[32m✔\u001b[39m \u001b[34mtune     \u001b[39m 0.1.1 \n",
+      "\u001b[32m✔\u001b[39m \u001b[34mmodeldata\u001b[39m 0.0.2      \u001b[32m✔\u001b[39m \u001b[34mworkflows\u001b[39m 0.2.0 \n",
+      "\u001b[32m✔\u001b[39m \u001b[34mparsnip  \u001b[39m 0.1.3      \u001b[32m✔\u001b[39m \u001b[34myardstick\u001b[39m 0.0.7 \n",
+      "\n",
+      "Warning message:\n",
+      "“package ‘broom’ was built under R version 4.0.2”\n",
+      "Warning message:\n",
+      "“package ‘dials’ was built under R version 4.0.2”\n",
+      "Warning message:\n",
+      "“package ‘infer’ was built under R version 4.0.3”\n",
+      "Warning message:\n",
+      "“package ‘modeldata’ was built under R version 4.0.1”\n",
+      "Warning message:\n",
+      "“package ‘parsnip’ was built under R version 4.0.2”\n",
+      "Warning message:\n",
+      "“package ‘recipes’ was built under R version 4.0.1”\n",
+      "Warning message:\n",
+      "“package ‘tune’ was built under R version 4.0.2”\n",
+      "Warning message:\n",
+      "“package ‘workflows’ was built under R version 4.0.2”\n",
+      "Warning message:\n",
+      "“package ‘yardstick’ was built under R version 4.0.2”\n",
+      "── \u001b[1mConflicts\u001b[22m ───────────────────────────────────────── tidymodels_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mscales\u001b[39m::\u001b[32mdiscard()\u001b[39m masks \u001b[34mpurrr\u001b[39m::discard()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m   masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mfixed()\u001b[39m  masks \u001b[34mstringr\u001b[39m::fixed()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34myardstick\u001b[39m::\u001b[32mspec()\u001b[39m masks \u001b[34mreadr\u001b[39m::spec()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m   masks \u001b[34mstats\u001b[39m::step()\n",
+      "\n",
+      "Registered S3 method overwritten by 'GGally':\n",
+      "  method from   \n",
+      "  +.gg   ggplot2\n",
+      "\n",
+      "Warning message:\n",
+      "“package ‘rvest’ was built under R version 4.0.2”\n",
+      "Loading required package: xml2\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘rvest’\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:purrr’:\n",
+      "\n",
+      "    pluck\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:readr’:\n",
+      "\n",
+      "    guess_encoding\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(readxl) \n",
     "library(tidyverse)\n",
@@ -1049,6 +1133,24 @@
    "metadata": {},
    "source": [
     "Table 8: New students analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Discussion\n",
+    "\n",
+    "Overall, we found that students’ LPR and PEG are enough and good predictors to predict their knowledge level. Using these predictors, we found k = 5 through 5-fold cross-validation and then we trained a KNN-classification model with 0.937931 accuracy which is good enough to estimate the UNS. We tested our model on some newly created students, with LPR and a PEG, and we found that the predicted UNS reflected the stats accordingly.\n",
+    "\n",
+    "The result make senses, the knowlege level is solely based on exam scores. Both PEG and LPR seem to have a positive, linear relationship with UNS. Also, in our test students, the outcome was approximately what we would expect. If the student had good LPR and PEG, their predicted knowledge level would be higher, and vice versa for a student with bad LPR and PEG.\n",
+    "\n",
+    "Our finding is very useful. On the one hand, we confirmed the useful of exams. It is good for schools to have exams to test the knowlege of level of students. On the other hand, students can focus on their performance of exams and increase the knowledge of level through having many practice exams.\n",
+    "\n",
+    "### Further questions \n",
+    "\n",
+    "1. Are there variables not included in the dataset that could improve the effectiveness of the model?\n",
+    "2. Since there is a kind of people who has mental stress during the exam which can effect the performance, according to these people, can we get the same findings like above?"
    ]
   },
   {
