--- a/Project Report/Report.ipynb
+++ b/Project Report/Report.ipynb
@@ -1143,14 +1143,14 @@
     "\n",
     "Overall, we found that students’ LPR and PEG are enough and good predictors to predict their knowledge level. Using these predictors, we found k = 5 through 5-fold cross-validation and then we trained a KNN-classification model with 0.937931 accuracy which is good enough to estimate the UNS. We tested our model on some newly created students, with LPR and a PEG, and we found that the predicted UNS reflected the stats accordingly.\n",
     "\n",
-    "The result make senses, the knowlege level is solely based on exam scores. Both PEG and LPR seem to have a positive, linear relationship with UNS. Also, in our test students, the outcome was approximately what we would expect. If the student had good LPR and PEG, their predicted knowledge level would be higher, and vice versa for a student with bad LPR and PEG.\n",
+    "The result makes sense, the knowledge level is solely based on exam scores. Both PEG and LPR seem to have a positive, linear relationship with UNS. Also, in our test students, the outcome was approximately what we would expect. If the student had good LPR and PEG, their predicted knowledge level would be higher, and vice versa for a student with bad LPR and PEG.\n",
     "\n",
-    "Our finding is very useful. On the one hand, we confirmed the useful of exams. It is good for schools to have exams to test the knowlege of level of students. On the other hand, students can focus on their performance of exams and increase the knowledge of level through having many practice exams.\n",
+    "Our finding is very useful. On the one hand, we confirmed the usefulness of exams. It is good for schools to have exams to test the knowledge of the level of students. On the other hand, students can focus on their performance of exams and increase their knowledge of level through having many practice exams.\n",
     "\n",
     "### Further questions \n",
     "\n",
     "1. Are there variables not included in the dataset that could improve the effectiveness of the model?\n",
-    "2. Since there is a kind of people who has mental stress during the exam which can effect the performance, according to these people, can we get the same findings like above?"
+    "2. Since there is a kind of people who has mental stress during the exam which can affect the performance, according to these people, can we get the same findings as above?"
    ]
   },
   {
