Add some content in discussion

--- a/Project Report/Report.ipynb
+++ b/Project Report/Report.ipynb
@@ -1145,12 +1145,13 @@
     "\n",
     "The result makes sense, the knowledge level is solely based on exam scores. Both PEG and LPR seem to have a positive, linear relationship with UNS. Also, in our test students, the outcome was approximately what we would expect. If the student had good LPR and PEG, their predicted knowledge level would be higher, and vice versa for a student with bad LPR and PEG.\n",
     "\n",
-    "Our finding is very useful. On the one hand, we confirmed the usefulness of exams. It is good for schools to have exams to test the knowledge of the level of students. On the other hand, students can focus on their performance of exams and increase their knowledge of level through having many practice exams.\n",
+    "Our finding is very useful. On the one hand, we confirmed the usefulness of exams. It is good for schools to have exams to test the knowledge of the level of students. Schools could use this information to determine the effectiveness of their teaching strategies by comparing exam scores across different terms in which different teaching strategies were used. This would result in a more efficient learning environment. On the other hand, students can focus on their performance of exams and increase their knowledge of level through having many practice exams.\n",
     "\n",
     "### Further questions \n",
     "\n",
     "1. Are there variables not included in the dataset that could improve the effectiveness of the model?\n",
-    "2. Since there is a kind of people who has mental stress during the exam which can affect the performance, according to these people, can we get the same findings as above?"
+    "2. Since there is a kind of people who has mental stress during the exam which can affect the performance, according to these people, can we get the same findings as above?\n",
+    "3. If there is a situation where students with a relatively low level of knowledge can score as well or higher on exams with a higher level of knowledge or vice versa? and what allows it?"
    ]
   },
   {
