Some modifies in discussion part

--- a/Project Report/Report.ipynb
+++ b/Project Report/Report.ipynb
@@ -1141,11 +1141,12 @@
    "source": [
     "## Discussion\n",
     "\n",
-    "Overall, we found that students’ LPR and PEG are enough and good predictors to predict their knowledge level. Using these predictors, we found k = 5 through 5-fold cross-validation and then we trained a KNN-classification model with 0.937931 accuracy which is good enough to estimate the UNS. We tested our model on some newly created students, with LPR and a PEG, and we found that the predicted UNS reflected the stats accordingly.\n",
+    "Overall, we found that students’ LPR and PEG are good predictors to predict their knowledge level. Using these predictors, we found k = 5 through 5-fold cross-validation and then we trained a KNN-classification model with 0.937931 accuracy which is good enough to estimate the UNS. We tested our model on some newly created students, with LPR and a PEG, and we found that the predicted UNS reflected the stats accordingly.\n",
     "\n",
-    "The result makes sense, the knowledge level is solely based on exam scores. Both PEG and LPR seem to have a positive, linear relationship with UNS. Also, in our test students, the outcome was approximately what we would expect. If the student had good LPR and PEG, their predicted knowledge level would be higher, and vice versa for a student with bad LPR and PEG.\n",
+    "The results make sense, the knowledge level is solely based on exam scores. Both PEG and LPR seem to have a positive, linear relationship with UNS. Also, in our testing data, the outcome was approximately what we would expect. If the student had good LPR and PEG, their predicted knowledge level would be higher, and vice versa for a student with bad LPR and PEG.\n",
     "\n",
-    "Our finding is very useful. On the one hand, we confirmed the usefulness of exams. It is good for schools to have exams to test the knowledge of the level of students. Schools could use this information to determine the effectiveness of their teaching strategies by comparing exam scores across different terms in which different teaching strategies were used. This would result in a more efficient learning environment. On the other hand, students can focus on their performance of exams and increase their knowledge of level through having many practice exams.\n",
+    "Our findings are very useful. On the one hand, we confirmed the usefulness of exams. It is good for schools to have exams to test the knowledge level of students. Schools could use this information to determine the effectiveness of their teaching strategies by comparing exam scores across different terms in which different teaching strategies were used.  This would result in a more efficient learning environment. On the other hand, students can focus on their performance on exams and increase their level through having many practice exams.  This is also important for employers as they can use exam scores to make better assessments of potential employees.\n",
+    "\n",
     "\n",
     "### Further questions \n",
     "\n",
