--- a/Project Report/Report.ipynb
+++ b/Project Report/Report.ipynb
@@ -143,7 +143,7 @@
    "source": [
     "### Outline\n",
     "\n",
-    "We will start by loading and wrangling our data into a form with our potential predictors and predictor class, UNS (Student Knowledge Level). Then we will find and isolate the predictors most relevant to predicting UNS. As this is a classification problem, we will be using the K nearest neighbors method which means we will be performing cross-validation to find the optimal K value to use. Lastly we will take certain new data with predicted outcomes and pass them through our model to see if it can sucessfully predict a knowledge level of a new student."
+    "We will start by loading and wrangling our data into a form with our potential predictors and predictor class, UNS (Student Knowledge Level). Then we will find and isolate the predictors most relevant for predicting UNS. As this is a classification problem, we will be using the K nearest neighbors method which means we will be performing cross-validation to find the optimal K value to use. Lastly we will take certain new data with predicted outcomes and pass them through our model to see if it can sucessfully predict the knowledge level of a new student."
    ]
   },
   {
@@ -174,7 +174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**The data has aready been split in the training and testing data for us by the gatherer, therefore the next two codes load the training, then testing data respectively and mutates our class, UNS, into a factor. The data is already tidy, however, the factor name used for the testing data is \"Very Low\" while the triaining data is simply \"very_low\" so have to also rename the factor level for the testing data.**"
+    "**The data has aready been split in the training and testing data for us by the gatherer, therefore the next two codes load the training, then testing data respectively and mutates our class, UNS, into a factor. The data is already tidy, however, the factor name used for the testing data is \"Very Low\" while the triaining data is simply \"very_low\" so we have to also rename the factor level for the testing data.**"
    ]
   },
   {
@@ -574,7 +574,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**To get a general sense of which predictors we should use, we made a table of plots using [ggpairs] and to which we can see that many of our predictors such as STG, SCG, and STR lack any sort of solid relationship with the UNS. We can also see that PEG is a fairly good predictor and that PEG with LPR seems to be a favourable combination of predictors to use.**"
+    "**To get a general sense of which predictors we should use, we made a table of plots using [ggpairs] to which we can see that many of our predictors such as STG, SCG, and STR lack any sort of solid relationship with the UNS. We can also see that PEG is a fairly good predictor and that PEG with LPR seems to be a favourable combination of predictors to use.**"
    ]
   },
   {
@@ -678,7 +678,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**To show that PEG and LPR are our best predictors in terms of coding we used forward selection to compare the accuracy of each string of predictors and identified that PEG + LPR is indeed our ideal combination for training and evaluating our data with. As you can see from Table 4, adding or taking away a predictor lowers the estimated accuracy.**"
+    "**To show that PEG and LPR are our best predictors in terms of coding we used forward selection to compare the accuracy of each string of predictors and identified that PEG + LPR is indeed our ideal combination for training and evaluating our data with. As you can see from Table 5, adding or taking away a predictor lowers the estimated accuracy.**"
    ]
   },
   {
